# AudioTools

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  webui.py
app/: main.py
app/adapters/: __init__.py
app/adapters/recognizers/: __init__.py  neural.py
app/adapters/senders/: __init__.py  email.py
app/adapters/uploaders/: __init__.py  aws.py
app/api/models/: __init__.py  users.py
app/api/v1/routers/: login.py
app/aws/: __init__.py  base.py  buckets.py
app/backend/api/v1/: transcriber.py
app/backend/broker/: client.py
app/configs/: __init__.py  log_settings.py  pyproject.py  settings.py
app/drivers/: emails.py
app/interfaces/: __init__.py  audio.py  files.py  iam.py  pages.py  recognizers.py  senders.py
app/services/: __init__.py  audio.py  emails.py  interfaces.py  jwt.py  uploader.py
app/webui/: __init__.py  webui.py
app/webui/pages/: __init__.py  audio.py  interfaces.py  prompts.py
app/webui/pages/audio/: __init__.py  converter.py  transcribe.py  upload.py
tests/: test_audio.py  test_aws_files.py  test_b.py  test_emails.py  test_multi_pages.py  test_w.py
tests/api/: test_login.py
webui/webui/: __init__.py
