[tool.poetry]
name = "webui"
version = "0.1.0"
description = ""
authors = ["IX <borntokill.ix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.9.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
# ruff = "^0.1.11"

[tool.ruff.lint]
dummy-variable-rgx = "^_$"


[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
split-on-trailing-comma=true
combine-as-imports=true
known-third-party = ["bound"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "PLC0414"]
"examples/**" = ["N805", "N999", "RUF012"]
"tests/**" = ["RUF012", "SIM115"]
